fix(fab-speed-dial): keyboard navigation issues with tab and shift+tab
- add code to handle Tab and Shift+Tab keyboard interactions
- rip out old an inaccessible `tabindex` shifting code
- use a more noticeable background color for raised mini fab action buttons
  in speed dials as compared to stand-alone raised mini fab buttons
- change fab-speed-dial demo from branded SVGs with hard coded colors to
  Material Design icons that can be styled by color
- add button demo of `md-raised md-fab`
- move from old `vm` controller alias to more consistent `ctrl`

Fixes #12043

--- a/src/components/fabSpeedDial/fabSpeedDial-theme.scss
+++ b/src/components/fabSpeedDial/fabSpeedDial-theme.scss
@@ -2,4 +2,12 @@ md-fab-speed-dial.md-THEME_NAME-theme {
   md-fab-trigger .md-fab.md-button[disabled] {
     background-color: '{{foreground-4}}';
   }
+  md-fab-actions .md-fab-action-item {
+    .md-button.md-fab.md-raised.md-mini {
+      &:hover,
+      &.md-focused {
+        background-color: '{{background-500}}';
+      }
+    }
+  }
 }
